Attempting to fix top bar on mobile

--- a/css/stylesheet-mobile-override.css
+++ b/css/stylesheet-mobile-override.css
@@ -1,10 +1,49 @@
+:root {
+	/* Font Weight/Size/Family */
+	--ff: sans-serif;
+	--font-logo: bold 1.0rem/1.4em var(--ff);
+
+	/* Banner and Sidebar Sizes */
+	--banner-height: 120px;
+	--banner-margin: 40px;
+}
+
 html {
 	/*font-size: 150%;*/
 	font-size: 1.25vh;
 }
 
+#banner {
+	/*column-gap: 20px;*/
+
+	/* Logo Side */
+	& #banner-left {
+		& .uml-logo {
+			height: var(--banner-height);
+		}
+
+		& h1 {
+			font: var(--font-logo);
+		}
+	}
+
+	/* Student Resource Side */
+	& #banner-right {
+		/* Icons */
+		& .student-resource-icon {
+			/* Make each icon the same width */
+			min-width: 85px;
+			& img {
+				/* Icons dimensions are equal and based off of initial banner height */
+				height: calc(var(--banner-height) * 0.5);
+				width: calc(var(--banner-height) * 0.5);
+			}
+		}
+	}
+}
+
 .flex-grid {
-	/*gap: 36px;*/
+	gap: 30px;
 
 	& blockquote {
 		max-width: 100%;
